--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repository contains sample code for unit testing with javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/tsmjohnpascual/unit-testing/issues"
   },
-  "homepage": "https://github.com/tsmjohnpascual/unit-testing#readme"
+  "homepage": "https://github.com/tsmjohnpascual/unit-testing#readme",
+  "devDependencies": {
+    "jest": "^28.1.2"
+  }
 }
