--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This repository contains sample code for unit testing with javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
